# resume-site

./: .containerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Containerfile  LICENSE  PERFORMANCE.md  README.md  ROADMAP.md  ROADMAP_v0.2.0.md  ROADMAP_v0.3.0.md  ROADMAP_v0.3.1.md  ROADMAP_v0.3.2.md  ROADMAP_v0.3.3.md  ROADMAP_v0.3.5.md  SECURITY.md  THREAT_MODEL.md  app.py  babel.cfg  compose.yaml  config.example.yaml  config.schema.json  conftest.py  docker-entrypoint.sh  gitignore  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  resume-site-backup.service  resume-site-backup.timer  resume-site.container  schema.sql  sshkey  sshkey.pub  (+2 more)
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  mutation.yml  security-scan.yml
.zap/: auth-context.xml  filter_findings.py
app/: __init__.py  assets.py  db.py  errors.py  events.py  exceptions.py  models.py
app/routes/: __init__.py  admin.py  api.py  blog.py  blog_admin.py  contact.py  locale.py  metrics.py  public.py  review.py
app/services/: __init__.py  activity_log.py  alerting.py  analytics.py  api_token_reveals.py  api_tokens.py  backups.py  blog.py  config.py  content.py  crud.py  deprecation.py  event_subscribers.py  form.py  logging.py  login_throttle.py  mail.py  metrics.py  migrations.py  minify.py  pagination.py  photos.py  request_filter.py  request_ip.py  reviews.py  service_items.py  settings_svc.py  stats.py  text.py  time_helpers.py  tokens.py  translations.py  urls.py  webhooks.py
app/static/css/: style.css
app/static/js/: main.js  swagger-init.js
app/templates/: base.html
app/templates/admin/: api_tokens.html  api_tokens_reveal.html  base_admin.html  blog_edit.html  blog_list.html  content.html  content_edit.html  dashboard.html  login.html  photos.html  reviews.html  search.html  services.html  settings.html  stats.html  theme.html  tokens.html  translations.html  webhook_deliveries.html  webhooks.html
app/templates/api/: docs.html
app/templates/components/: empty_state.html  picture.html
app/templates/public/: blog_index.html  blog_post.html  case_study.html  certifications.html  contact.html  index.html  portfolio.html  project_detail.html  projects.html  review.html  services.html  testimonials.html
docs/: API.md  API_COMPATIBILITY.md  LOGGING.md  OBSERVABILITY_RUNBOOK.md  PENTEST_CHECKLIST.md  PRODUCTION.md  SECURITY.md  UPGRADE.md  alerting-rules.md  alerting-rules.yaml  grafana-dashboard.json  openapi.yaml
migrations/: 001_baseline.sql  002_blog_tables.sql  003_admin_customization.sql  004_i18n.sql  005_indexes.sql  006_login_attempts.sql  007_api_tokens.sql  009_webhooks.sql  010_fts5_search.sql  011_content_translations.sql  012_api_token_reveals.sql  013_admin_activity_log_append_only.sql  013_resume_visibility_normalize.sql
scripts/: benchmark_routes.py
seeds/: defaults.sql
tests/: MUTATION_EQUIVALENT.md  TESTING_STANDARDS.md  conftest.py  mutation_review.md  test_admin.py  test_alerting_rules.py  test_api.py  test_api_locale.py  test_api_tokens.py  test_api_tokens_admin.py  test_api_tokens_cli.py  test_app.py  test_backups.py  test_blog.py  test_browser_playwright.py  test_ci_guards.py  test_complexity_report.py  test_crud.py  test_customization.py  test_dashboard_widgets.py  test_db_pragmas.py  test_deprecation.py  test_edge_cases_admin.py  test_edge_cases_api.py  test_edge_cases_blog.py  test_edge_cases_blog_admin.py  test_edge_cases_contact.py  test_edge_cases_photos.py  test_edge_cases_reviews.py  test_edge_cases_session.py  test_edge_cases_settings.py  test_edge_cases_webhooks.py  test_errors.py  test_event_subscribers.py  test_events.py  test_exceptions.py  test_form_helper.py  test_fuzz.py  test_i18n.py  test_integration.py  (+26 more)
tests/browser/: __init__.py  conftest.py  test_cdn_unavailability.py  test_csp_nonce.py  test_gsap_scroll.py  test_photo_upload_drag.py  test_quill_round_trip.py  test_reorder_persists.py  test_theme_editor_live.py  test_theme_toggle.py
tests/loadtests/: locustfile.py  memory_probe.py  regression_check.py  thresholds.json
tests/synthetic/: healthcheck.sh  monitor.py
translations/: messages.pot
translations/en/LC_MESSAGES/: messages.mo  messages.po
